--- a/css/styles.css
+++ b/css/styles.css
@@ -196,6 +196,10 @@ ul {
   color: var(--color-primary-blow);
 }
 
+.section-title.centered {
+  text-align: center;
+}
+
 .capitalize {
   text-transform: capitalize;
 }
@@ -256,9 +260,44 @@ ul {
 }
 
 /* Advantages section */
+.advantages-title {
+  max-width: 432px;
+  margin: 0 auto 48px;
+}
+
+/* .advantages-container {
+  display: flex;
+  gap: 32px;
+  align-items: center;
+} */
+
+/* ^^^ then uncomment ^^^ */
+
+.advantages-list {
+  display: flex;
+  gap: 56px;
+  align-items: center;
+}
+
+.advantages-item {
+  flex-basis: calc((100% - 112px) / 3);
+}
+
+.advantages-card {
+  padding: 24px 32px;
+  text-align: center;
+  box-shadow: 0 4px 4px 0 rgba(168, 198, 245, 0.38);
+  border-radius: 32px;
+}
+
 .advantages-text {
+  text-align: center;
   color: #000000;
   line-height: 1.3;
+}
+
+.advantages-icon {
+  fill: var(--color-primary-blow);
 }
 
 /* Procedures section */
