--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ ul {
 }
 
 .decoration {
-  max-width: 529px;
+  color: var(--color-primary-blow);
 }
 
 /* Header */
@@ -169,6 +169,7 @@ ul {
 
 .hero-title {
   margin-top: 0;
+  max-width: 529px;
   font-size: 140px;
   font-weight: 700;
   line-height: 0.9;
@@ -353,6 +354,43 @@ ul {
   fill: var(--color-primary-white);
   background-color: var(--color-primary-blow);
   border: var(--color-primary-blow);
+}
+
+/* Contact section */
+.contact-section {
+  padding-bottom: 96px;
+}
+
+.contact-title {
+  margin-bottom: 48px;
+}
+
+.contact-container {
+  display: flex;
+  gap: 32px;
+}
+
+.contact-map {
+  flex-basis: 60%;
+  border: none;
+  border-radius: 32px;
+  width: 100%;
+}
+
+.contact-form {
+  max-height: 481px;
+  flex-basis: 40%;
+  border: none;
+  border-radius: 32px;
+  padding: 48px 74px;
+  background-color: var(--color-primary-dakr-blow);
+}
+
+.contact-text {
+  width: 100%;
+  font-size: 22px;
+  font-weight: 700;
+  color: var(--color-primary-white);
 }
 
 /* Footer */
